packages/cjs-to-esm/test/snapshots/package-corpus/core-js/es/error/constructor.js
import "../../modules/es.error.cause";
import path from "../../internals/path";
const _cjs_default = path;
export default _cjs_default;
